--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -7,8 +7,8 @@
     <title>Self Coding Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./sidebar.css">
+    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../sidebar.css">
     <link rel="stylesheet" href="http://pro.fontawesome.com/releases/v5.10.0/css/all.css">
 </head>
 
@@ -22,22 +22,22 @@
                         class="fal fa-stream"></i></button>
             </div>
             <ul class="list-unstyled px-2 fw-light">
-                <li class="active"><a href="./Pages/Home.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li class="active"><a href="./Home.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-home"></i>&nbsp;Home</a></li>
-                <li><a href="./Pages/Tutorial.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li><a href="./Tutorial.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-list"></i>&nbsp;Tutorial</a></li>
-                <li><a href="./Pages/Qna.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li><a href="./Qna.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-envelope-open-text"></i>&nbsp;QnA</a></li>
-                <li><a href="./Pages/HotTopics.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li><a href="./HotTopics.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-users"></i>&nbsp;Hot Topics</a></li>
-                <li><a href="./Pages/ProgramPractice.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li><a href="./ProgramPractice.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-envelope-open-text"></i>&nbsp;Program Practice</a></li>
             </ul>
             <hr class="h-color mx-3">
             <ul class="list-unstyled px-2 fw-light">
-                <li><a href="./Pages/CustomWork.html" class="text-decoration-none px-3 py-2 d-block"><i
+                <li><a href="./CustomWork.html" class="text-decoration-none px-3 py-2 d-block"><i
                             class="fal fa-bell"></i> Custom Work</a></li>
-                <li><a href="./Pages/About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>
+                <li><a href="./About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>
                         About Me</a></li>
             </ul>
         </div>
@@ -46,7 +46,7 @@
                 <div class="container-fluid">
                     <div class="d-flex justify-content-between d-md-none d-block">
                         <button class="btn px-1 py-0 open-btn me-2"><i class="fal fa-stream"></i></button>
-                        <a href="./Pages/Home.html" class="navbar-brand fs-4"><span
+                        <a href="./Home.html" class="navbar-brand fs-4"><span
                                 class="bg-dark rounded px-2 py-0 text-white">KS</span> Coding Portal</a>
 
                     </div>
@@ -58,22 +58,22 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                         <ul class="navbar-nav mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a href="./Pages/Home.html" class="nav-link active">Home</a>
+                                <a href="./Home.html" class="nav-link active">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./Pages/Tutorial.html" class="nav-link">Tutorial</a>
+                                <a href="./Tutorial.html" class="nav-link">Tutorial</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./Pages/Qna.html" class="nav-link">QnA</a>
+                                <a href="./Qna.html" class="nav-link">QnA</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./Pages/HotTopics.html" class="nav-link">Hot Topics</a>
+                                <a href="./HotTopics.html" class="nav-link">Hot Topics</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./Pages/ProgramPractice.html" class="nav-link">Program Practice</a>
+                                <a href="./ProgramPractice.html" class="nav-link">Program Practice</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./Pages/About.html" class="nav-link">About</a>
+                                <a href="./About.html" class="nav-link">About</a>
                             </li>
                         </ul>
                     </div>
@@ -119,15 +119,15 @@
                 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                     <p class="col-md-2 mb-0 text-muted">© 2023 Company, Inc</p>
                     <ul class="nav col-md-10 justify-content-end">
-                        <li class="nav-item"><a href="./Pages/Home.html" class="nav-link px-2 text-muted">Home</a></li>
-                        <li class="nav-item"><a href="./Pages/Tutorial.html" class="nav-link px-2 text-muted">Tutorial</a>
+                        <li class="nav-item"><a href="./Home.html" class="nav-link px-2 text-muted">Home</a></li>
+                        <li class="nav-item"><a href="./Tutorial.html" class="nav-link px-2 text-muted">Tutorial</a>
                         </li>
-                        <li class="nav-item"><a href="./Pages/Qna.html" class="nav-link px-2 text-muted">QnA</a></li>
-                        <li class="nav-item"><a href="./Pages/HotTopics.html" class="nav-link px-2 text-muted">Hot Topics</a>
+                        <li class="nav-item"><a href="./Qna.html" class="nav-link px-2 text-muted">QnA</a></li>
+                        <li class="nav-item"><a href="./HotTopics.html" class="nav-link px-2 text-muted">Hot Topics</a>
                         </li>
-                        <li class="nav-item"><a href="./Pages/ProgramPractice.html" class="nav-link px-2 text-muted">Program
+                        <li class="nav-item"><a href="./ProgramPractice.html" class="nav-link px-2 text-muted">Program
                                 Practice</a></li>
-                        <li class="nav-item"><a href="./Pages/About.html" class="nav-link px-2 text-muted">About</a></li>
+                        <li class="nav-item"><a href="./About.html" class="nav-link px-2 text-muted">About</a></li>
                     </ul>
                 </footer>
             </div>
@@ -138,7 +138,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"
         integrity="sha256-2Pmvv0kuTBOenSvLm6bvfBSSHrUJ+3A7x6P5Ebd07/g=" crossorigin="anonymous"></script>
-    <script src="./index.js"></script>
+    <script src="../index.js"></script>
 </body>
 
 </html>
