--- a/Pages/About.html
+++ b/Pages/About.html
@@ -9,7 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="../sidebar.css">
-    <link rel="stylesheet" href="http://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
@@ -19,25 +19,25 @@
                 <h1 class="fs-4"><span class="bg-white text-dark rounded shadow px-2">KS</span> <span
                         class="text-white fw-light"> Coding Portal</span></h1>
                 <button class="btn d-md-none d-block close-btn px-1 py-0 text-white"><i
-                        class="fal fa-stream"></i></button>
+                        class="fa fa-stream"></i></button>
             </div>
             <ul class="list-unstyled px-2 fw-light">
                 <li><a href="./Home.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-home"></i>&nbsp;Home</a></li>
+                            class="fa fa-home"></i>&nbsp;Home</a></li>
                 <li><a href="./Tutorial.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-list"></i>&nbsp;Tutorial</a></li>
+                            class="fa fa-list"></i>&nbsp;Tutorial</a></li>
                 <li><a href="./Qna.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-envelope-open-text"></i>&nbsp;QnA</a></li>
+                            class="fa fa-envelope-open-text"></i>&nbsp;QnA</a></li>
                 <li><a href="./HotTopics.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-users"></i>&nbsp;Hot Topics</a></li>
+                            class="fa fa-users"></i>&nbsp;Hot Topics</a></li>
                 <li><a href="./ProgramPractice.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-envelope-open-text"></i>&nbsp;Program Practice</a></li>
+                            class="fa fa-envelope-open-text"></i>&nbsp;Program Practice</a></li>
             </ul>
             <hr class="h-color mx-3">
             <ul class="list-unstyled px-2 fw-light">
                 <li><a href="./CustomWork.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-bell"></i> Custom Work</a></li>
-                <li  class="active"><a href="./About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>
+                            class="fa fa-bell"></i> Custom Work</a></li>
+                <li  class="active"><a href="./About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fa fa-bars"></i>
                         About Me</a></li>
             </ul>
         </div>
@@ -45,7 +45,7 @@
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <div class="container-fluid">
                     <div class="d-flex justify-content-between d-md-none d-block">
-                        <button class="btn px-1 py-0 open-btn me-2"><i class="fal fa-stream"></i></button>
+                        <button class="btn px-1 py-0 open-btn me-2"><i class="fa fa-stream"></i></button>
                         <a href="./Home.html" class="navbar-brand fs-4"><span
                                 class="bg-dark rounded px-2 py-0 text-white">KS</span> Coding Portal</a>
 
@@ -53,7 +53,7 @@
                     <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-label="Toggle navigation">
-                        <i class="fal fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                         <ul class="navbar-nav mb-2 mb-lg-0">
