--- a/Pages/Tutorials/ReactJs.html
+++ b/Pages/Tutorials/ReactJs.html
@@ -9,7 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="../../style.css">
     <link rel="stylesheet" href="../../sidebar.css">
-    <link rel="stylesheet" href="http://pro.fontawesome.com/releases/v5.10.0/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 
 <body>
@@ -19,13 +19,13 @@
                 <h1 class="fs-4"><span class="bg-white text-dark rounded shadow px-2">KS</span> <span
                         class="text-white fw-light"> Coding Portal</span></h1>
                 <button class="btn d-md-none d-block close-btn px-1 py-0 text-white"><i
-                        class="fal fa-stream"></i></button>
+                        class="fa fa-stream"></i></button>
             </div>
             <ul class="list-unstyled px-2 fw-light">
                 <li><a href=".././Home.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-home"></i>&nbsp;Home</a></li>
+                            class="fa fa-home"></i>&nbsp;Home</a></li>
                 <li class="active">
-                    <a href=".././Tutorial.html" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-list"></i>&nbsp;Tutorial</a>
+                    <a href=".././Tutorial.html" class="text-decoration-none px-3 py-2 d-block"><i class="fa fa-list"></i>&nbsp;Tutorial</a>
                     <div class="collapse show" id="orders-collapse">
                         <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
                           <li class="nav-item w-100" role="presentation">
@@ -74,17 +74,17 @@
                     </div>
                 </li>
                 <li><a href="./../Qna.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-envelope-open-text"></i>&nbsp;QnA</a></li>
+                            class="fa fa-envelope-open-text"></i>&nbsp;QnA</a></li>
                 <li><a href=".././HotTopics.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-users"></i>&nbsp;Hot Topics</a></li>
+                            class="fa fa-users"></i>&nbsp;Hot Topics</a></li>
                 <li><a href=".././ProgramPractice.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-envelope-open-text"></i>&nbsp;Program Practice</a></li>
+                            class="fa fa-envelope-open-text"></i>&nbsp;Program Practice</a></li>
             </ul>
             <hr class="h-color mx-3">
             <ul class="list-unstyled px-2 fw-light">
                 <li><a href=".././CustomWork.html" class="text-decoration-none px-3 py-2 d-block"><i
-                            class="fal fa-bell"></i> Custom Work</a></li>
-                <li><a href=".././About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fal fa-bars"></i>
+                            class="fa fa-bell"></i> Custom Work</a></li>
+                <li><a href=".././About.html" class="text-decoration-none px-3 py-2 d-block"><i class="fa fa-bars"></i>
                         About Me</a></li>
             </ul>
         </div>
@@ -92,7 +92,7 @@
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                 <div class="container-fluid">
                     <div class="d-flex justify-content-between d-md-none d-block">
-                        <button class="btn px-1 py-0 open-btn me-2"><i class="fal fa-stream"></i></button>
+                        <button class="btn px-1 py-0 open-btn me-2"><i class="fa fa-stream"></i></button>
                         <a href=".././Home.html" class="navbar-brand fs-4"><span
                                 class="bg-dark rounded px-2 py-0 text-white">KS</span> Coding Portal</a>
 
@@ -100,7 +100,7 @@
                     <button class="navbar-toggler p-0 border-0" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-label="Toggle navigation">
-                        <i class="fal fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                         <ul class="navbar-nav mb-2 mb-lg-0">
@@ -185,8 +185,8 @@
                             <li>JavaScript</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2 disabled">Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2 disabled">Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="babel" role="tabpanel" aria-labelledby="babel-tab">
@@ -214,8 +214,8 @@
                             <li>Babel can convert JSX syntax.</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('introduction-tab')">Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('setup-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('introduction-tab')">Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('setup-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="setup" role="tabpanel" aria-labelledby="babel-tab">
@@ -247,8 +247,8 @@
                         <h6>Starting React App On Server</h6>
                         <p><code>npm start</code></p>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('babel-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('workflow-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('babel-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('workflow-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="workflow" role="tabpanel" aria-labelledby="workflow-tab">
@@ -269,8 +269,8 @@
                         <img class="img_screenshot" src="../../Images/React/5_1.png" alt="workflow_image">
                         <p>Like the App Component we can render a numerous component defined seperately in different files. </p>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('setup-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('jsx-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('setup-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('jsx-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="jsx" role="tabpanel" aria-labelledby="jsx-tab">
@@ -323,8 +323,8 @@
                             <li>Use ternary expressions instead.</li>
                         </ul>                        
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('workflow-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('component-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('workflow-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('component-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="component" role="tabpanel" aria-labelledby="component-tab">
@@ -348,8 +348,8 @@
                             <li>It is now suggested to use Function components, which were added in React 16.8.</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('jsx-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('props-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('jsx-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('props-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="props" role="tabpanel" aria-labelledby="props-tab">
@@ -394,8 +394,8 @@
                             <li>Props are-also how you pass data from one component to another.</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('component-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('proptype-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('component-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('proptype-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="proptype" role="tabpanel" aria-labelledby="babel-tab">
@@ -458,8 +458,8 @@
                             <li>PropTypes.symbol</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('props-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('arrowfn-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('props-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('arrowfn-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="arrowfn" role="tabpanel" aria-labelledby="arrowfn-tab">
@@ -488,8 +488,8 @@
                             </li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('prototype-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('exports-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('prototype-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('exports-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="exports" role="tabpanel" aria-labelledby="exports-tab">
@@ -580,8 +580,8 @@
                             </code>
                         </div>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('arrowfn-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('classComponent-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('arrowfn-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('classComponent-tab')" >Next </button>
                         </div>
                     </div>
                     <div class="tab-pane" id="classComponent" role="tabpanel" aria-labelledby="classComponent-tab">
@@ -637,8 +637,8 @@
                             <li>rafcp - React Arrow Function Component With PropType</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('exports-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('classConstructor-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('exports-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('classConstructor-tab')" >Next </button>
                         </div>
                     </div>   
                     <div class="tab-pane" id="classConstructor" role="tabpanel" aria-labelledby="classConstructor-tab">
@@ -682,8 +682,8 @@
                             </code>
                         </div>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('classComponent-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('state-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('classComponent-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('state-tab')" >Next </button>
                         </div>
                     </div>  
                     <div class="tab-pane" id="state" role="tabpanel" aria-labelledby="babel-tab">
@@ -783,8 +783,8 @@
                         <img class="img_screenshot" src="../../Images/React/16_2.png" alt="">
                         <img class="img_screenshot" src="../../Images/React/16_3.png" alt="">
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('classConstructor-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('classConstructor-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next </button>
                         </div>
                     </div>               
                     <!-- <div class="tab-pane" id="setup" role="tabpanel" aria-labelledby="babel-tab">
@@ -796,8 +796,8 @@
                             <li>Netscape presented JavaScript to ECMA International, which develops standards and it was renamed to ECMAScript.</li>
                         </ul>
                         <div>
-                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('babel-tab')" >Previous Chapter</button>
-                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next Chapter</button>
+                            <button class="btn btn-success text-white px-4 py-2" onclick="navigateTo('babel-tab')" >Previous </button>
+                            <button class="btn btn-success text-white px-4 py-2 float-end" onclick="navigateTo('babel-tab')" >Next </button>
                         </div>
                     </div> -->
                 </div>           
