--- a/Pages/Tutorial.html
+++ b/Pages/Tutorial.html
@@ -137,6 +137,19 @@
                                                 <td><a class="text-decoration-none" href="./Tutorials/CSharp.html">C# (C Sharp)</a></td>
                                                 <td>Programming Basics</td>
                                             </tr>
+                                            <tr class="align-middle">
+                                                <td>#4.</td>
+                                                <td>
+                                                    <div class="d-flex align-items-center">
+                                                        <img src="https://yt3.googleusercontent.com/ytc/AIdro_msVIKd-JzYmxyQcI1lx0dInRI1QkpVI1HF9ib-=s176-c-k-c0x00ffffff-no-rj" class="avatar sm rounded-pill me-3 flex-shrink-0" alt="C#">
+                                                        <div>
+                                                            <div class="h6 mb-0 lh-1">MERN Course</div>
+                                                        </div>
+                                                    </div>
+                                                </td>
+                                                <td><a class="text-decoration-none" href="./Tutorials/MernCodersGyan.html">Mern (Coders Gyan)</a></td>
+                                                <td>Frontend Backend Database Architecture</td>
+                                            </tr>
                                             <!-- <tr class="align-middle">
                                                 <td>#3.</td>
                                                 <td>
